--- a/HW2/HW2_MBoltzmannDistribution.ipynb
+++ b/HW2/HW2_MBoltzmannDistribution.ipynb
@@ -87,7 +87,7 @@
       },
       "source": [
         " Written by Federica B. Bianco @fedhere\n",
-        "UDel DSPS"
+        "UDel DSPS, Completed by Zach Mckennedy"
       ]
     },
     {
