--- a/HW8/Plots.ipynb
+++ b/HW8/Plots.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHsU6dbLn1MayR5n/QV091",
+      "authorship_tag": "ABX9TyMlaGdkhvSQQ6mmnjd31/hN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -169,6 +169,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "**Figure 1:** Photometry of the Afterglow of GRB 052505A. All photometry is from the Swift satellite and it is obtained from Table 3 of Blustin et al. 2005 https://arxiv.org/pdf/astro-ph/0507515.pdf. The photometric band for each datapoint is indicated in the legend. Time is relative from the estimated moment of explosion of the stellar progenitor. Upperlimits are indicated by down-pointing arrows."
+      ],
+      "metadata": {
+        "id": "1iZkp4wOPsj1"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "This is a poor example of a plot because of the formatting creating ugly and unclear data. The colors of the points seem a little ambiguous, since they weren't specified, and since the data is so tightly packed the points overlap each other with full opacity. On top of this, the axis labels don't specify units. To fix this I am going to rewrite the plotting function to correct all these issues."
       ],
       "metadata": {
@@ -286,6 +295,15 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Figure 1:** Photometry of the Afterglow of GRB 052505A. All photometry is from the Swift satellite and it is obtained from Table 3 of Blustin et al. 2005 https://arxiv.org/pdf/astro-ph/0507515.pdf. The photometric band filter for each datapoint is indicated in the legend. Time is relative from the estimated moment of explosion of the stellar progenitor. Upperlimits are indicated by down-pointing arrows."
+      ],
+      "metadata": {
+        "id": "2wa1-UcdPxY1"
+      }
     }
   ]
 }
